# substrate-feeless-token-factory

./: Cargo.toml  README.md
runtime/: Cargo.toml
runtime/src/: fungible.rs
src/: chain_spec.rs
substrate-node-template/runtime/src/: fungible.rs  lib.rs
supercharger-ui/: yarn-upgrade-all.sh
supercharger-ui/src/: App.js  Balances.js  Transfer.js
