[[bin]]
name = 'node-template'
path = 'src/main.rs'

[dependencies]
derive_more = '0.14.0'
exit-future = '0.1'
futures = '0.1'
log = '0.4'
parking_lot = '0.9.0'
tokio = '0.1'
trie-root = '0.15.2'

[dependencies.babe]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe'
rev = 'bc9d55f738db72d35b6dfdf9dad7bf2d82204665'

[dependencies.babe-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe-primitives'
rev = 'bc9d55f738db72d35b6dfdf9dad7bf2d82204665'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = 'bc9d55f738db72d35b6dfdf9dad7bf2d82204665'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = 'bc9d55f738db72d35b6dfdf9dad7bf2d82204665'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = 'bc9d55f738db72d35b6dfdf9dad7bf2d82204665'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'bc9d55f738db72d35b6dfdf9dad7bf2d82204665'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = 'bc9d55f738db72d35b6dfdf9dad7bf2d82204665'

[dependencies.node-template-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'bc9d55f738db72d35b6dfdf9dad7bf2d82204665'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'bc9d55f738db72d35b6dfdf9dad7bf2d82204665'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'bc9d55f738db72d35b6dfdf9dad7bf2d82204665'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'bc9d55f738db72d35b6dfdf9dad7bf2d82204665'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'bc9d55f738db72d35b6dfdf9dad7bf2d82204665'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'bc9d55f738db72d35b6dfdf9dad7bf2d82204665'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = 'bc9d55f738db72d35b6dfdf9dad7bf2d82204665'

[package]
authors = ['Anonymous']
build = 'build.rs'
edition = '2018'
name = 'node-template'
version = '2.0.0'
[profile.release]
panic = 'unwind'

[build-dependencies]
vergen = '3'
